wrap all the things in content wrapper. modify index correctly.

--- a/src/app/components/MarkdownWrapper.scss
+++ b/src/app/components/MarkdownWrapper.scss
@@ -1,5 +1,5 @@
 :local {
-  .md {
+  .markdown-wrapper {
     height: 100%;
     overflow: auto;
     padding: 15px;
